--- a/public/index.html
+++ b/public/index.html
@@ -67,13 +67,14 @@
     <!-- Hero Section -->
     <section class="py-5">
       <div class="container">
-        <h1 class="fw-bold">
-          Langkah pertama yang aman untuk kesehatan mentalmu.
-        </h1>
+        <h1>Setiap Perasaanmu itu <strong>PENTING</strong></h1>
+        <span class="text-muted">
+          Merasa sendirian, Stress, Kewalahan, atau Banyak Pikiran?
+        </span>
         <p class="text-muted">
-          Coba screening mandiri berbasis SRQ-20 (20 pertanyaan).<br />Hasilnya
-          bukan diagnosis, namun bisa membantumu menentukan langkah awal yang
-          tepat.
+          Tenang, Kamu tidak sendiri. Kami siap membantumu memahami kondisi
+          kesehatan jiwamu dengan lebih baik . Luangkan waktu sekitar 3 menit
+          saja lalu klik tombol <strong>'Mulai Cek'</strong> di bawah ini.
         </p>
         <div class="mb-3">
           <span class="badge text-primary border border-primary px-3 me-3"
@@ -86,14 +87,21 @@
             >Bukan Diagnosis</span
           >
         </div>
-        <button id="btnStart" class="h3 btn btn-primary btn-lg px-5 fw-bold">
-          Mulai Screening
+        <button
+          id="btnStart"
+          class="h3 btn btn-primary btn-lg px-5 my-4 fw-bold"
+        >
+          Mulai Cek
         </button>
+        <p class="text-muted">
+          Hasilnya bukan diagnosis, namun bisa membantumu menentukan langkah
+          awal yang dapat kamu ambil.
+        </p>
       </div>
     </section>
 
     <!-- Setelah Screening -->
-    <section class="py-4">
+    <!-- <section class="py-4">
       <div class="container">
         <div class="card-custom">
           <h6 class="fw-bold">Setelah Screening</h6>
@@ -105,68 +113,38 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Penyedia Layanan -->
-    <section class="py-4">
+    <section>
       <div class="container">
-        <h2 class="fw-bold">Penyedia Layanan Kesehatan Mental Terdekat</h2>
+        <h3>
+          Disini kami menyediakan layanan konseling secara daring (online)
+          dengan tenaga kesehatan profesional yang siap mendengarkanmu,
+          mendukungmu, dan membantumu mengelola perasaanmu dengan lebih baik.
+        </h3>
         <p class="text-muted">
-          Contoh daftar—pilih untuk melihat detail, peta, atau buat janji.
+          Jangan ragu untuk segera booking jadwal konsultasi menyesuaikan dengan
+          waktu dan budget yang kamu miliki.
         </p>
-
-        <div class="row">
-          <!-- Klinik -->
-          <div class="col-md-4 col-sm-12 mt-sm-3">
-            <div class="card-custom h-100">
-              <h6 class="fw-bold">Klinik Sejiwa Harmoni</h6>
-              <p class="mb-1">Psikiater & Psikolog • Offline/Online</p>
-              <small class="text-muted">± 2.1 km • 4.8⭐</small>
-              <div class="mt-3">
-                <a href="#" class="btn btn-outline-primary btn-sm px-3 mb-sm-2"
-                  >Buka peta</a
-                >
-                <a href="#" class="btn btn-primary btn-sm px-3 fw-bold mb-sm-2"
-                  >Hubungi</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <!-- Mindful Center -->
-          <div class="col-md-4 col-sm-12 mt-sm-3">
-            <div class="card-custom h-100">
-              <h6 class="fw-bold">Mindful Center</h6>
-              <p class="mb-1">Psikolog Klinis • Online</p>
-              <small class="text-muted">± 0.0 km (online) • 4.7⭐</small>
-              <div class="mt-3">
-                <a href="#" class="btn btn-outline-primary btn-sm px-3 mb-sm-2"
-                  >Kunjungi situs</a
-                >
-                <a href="#" class="btn btn-primary btn-sm px-3 fw-bold mb-sm-2"
-                  >Buat Janji</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <!-- RS Jiwa Kota -->
-          <div class="col-md-4 col-sm-12 mt-sm-3">
-            <div class="card-custom h-100">
-              <h6 class="fw-bold">RS Jiwa Kota</h6>
-              <p class="mb-1">Layanan Darurat • 24/7</p>
-              <small class="text-muted">± 5.4 km • 119 ext 8</small>
-              <div class="mt-3">
-                <a href="#" class="btn btn-outline-primary btn-sm px-3 mb-sm-2"
-                  >Buka peta</a
-                >
-                <a href="#" class="btn btn-primary btn-sm px-3 fw-bold mb-sm-2"
-                  >Call 119</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
+        <button
+          id="btnStartBooking"
+          class="h3 btn btn-success btn-lg px-5 my-4 fw-bold"
+        >
+          Booking Konsultasi</button
+        ><br />
+        <span class="text-muted">
+          Kamu masih bingung mau memilih psikolog atau psikiater ? </span
+        ><br />
+        <span class="text-muted">
+          Psikolog menemanimu lewat konseling dan terapi untuk memahami
+          perasaanmu , sementara psikiater bisa membantu dengan obat serta
+          perawatan medis bila diperlukan.
+        </span>
+        <span class="text-muted">
+          Keduanya ada untuk mendukungmu agar merasa tidak sendirian dan merasa
+          lebih baik.
+        </span>
       </div>
     </section>
 
