Update index.html tambahan kata
Update index.html tambahan kata

--- a/public/index.html
+++ b/public/index.html
@@ -134,13 +134,16 @@
           Booking Konsultasi</button
         ><br />
         <span class="text-muted">
+          Rahasiamu dijamin <strong>AMAN</strong>. </span
+        ><br />
+        <span class="text-muted">
           Kamu masih bingung mau memilih psikolog atau psikiater ? </span
         ><br />
         <span class="text-muted">
           Psikolog menemanimu lewat konseling dan terapi untuk memahami
           perasaanmu , sementara psikiater bisa membantu dengan obat serta
-          perawatan medis bila diperlukan.
-        </span>
+          perawatan medis bila diperlukan. </span
+        ><br />
         <span class="text-muted">
           Keduanya ada untuk mendukungmu agar merasa tidak sendirian dan merasa
           lebih baik.
